# asteroids

./: CMakeLists.txt
include/: shader.h
include/game/: asteroid.h  player.h
include/utility/: coord.h
src/: main.cpp
src/game/: asteroid copy.cpp  asteroid.cpp  player.cpp
src/utility/: clamp.cpp  coord.cpp
